apps/internal-router/overlays/csdp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csdp-internal-router-ingress
  namespace: csdp
spec:
  ingressClassName: nginx
  rules:
  - host: lrcsdp.support.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /webhooks
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /workflows
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /app-proxy
        pathType: Prefix
